--- a/src/core/server/data/default-settings.json
+++ b/src/core/server/data/default-settings.json
@@ -62,6 +62,9 @@
                 "notContains": "/ghost/"
             }
         },
+        "content_foot": {
+            "defaultValue" : ""
+        },
         "ghost_head": {
             "defaultValue" : ""
         },
