--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghost",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "Just a blogging platform.",
   "author": "Ghost Foundation",
   "homepage": "http://ghost.org",
@@ -36,8 +36,8 @@
     "body-parser": "1.10.0",
     "bookshelf": "0.7.9",
     "busboy": "0.2.9",
+    "chalk": "1.0.0",
     "cheerio": "0.18.0",
-    "colors": "0.6.2",
     "compression": "1.2.2",
     "connect-slashes": "1.3.0",
     "cookie-session": "1.1.0",
@@ -63,13 +63,10 @@
     "rss": "1.1.1",
     "semver": "4.3.3",
     "showdown-ghost": "0.3.6",
-    "sqlite3": "3.0.6",
+    "sqlite3": "3.0.8",
     "unidecode": "0.1.3",
     "validator": "3.39.0",
-    "xml": "1.0.0",
-    "qiniu": "6.1.6",
-    "upyun": "1.1.2",
-    "aliyun-sdk": "1.3.1"
+    "xml": "1.0.0"
   },
   "optionalDependencies": {
     "mysql": "2.1.1",
@@ -102,8 +99,5 @@
     "supertest": "~0.15.0",
     "testem": "^0.6.23",
     "top-gh-contribs": "^1.0.0"
-  },
-  "aceenv": {
-    "NODE_ENV": "production"
   }
 }
