--- a/src/core/server/data/default-settings.json
+++ b/src/core/server/data/default-settings.json
@@ -34,7 +34,7 @@
             "defaultValue": ""
         },
         "defaultLang": {
-            "defaultValue": "zh_CN",
+            "defaultValue": "en_US",
             "validations": {
                 "isNull": false
             }
@@ -72,7 +72,7 @@
             "defaultValue": "{}"
         },
         "navigation": {
-            "defaultValue": "[{\"label\":\"首页\", \"url\":\"/\"}]"
+            "defaultValue": "[{\"label\":\"Home\", \"url\":\"/\"}]"
         },
         "isPrivate": {
             "defaultValue": "false"
@@ -83,7 +83,7 @@
     },
     "theme": {
         "activeTheme": {
-            "defaultValue": "casper-zh"
+            "defaultValue": "casper"
         }
     },
     "app": {
